# uuv_float

./: .gitignore  readme.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/: README.MD  test
src/robo_float_description/: CMakeLists.txt  package.xml
src/robo_float_description/launch/: upload.launch
src/robo_float_description/robots/: default.xacro
src/robo_float_description/urdf/: base.xacro  gazebo.xacro  sensors.xacro
src/simfloat_1001/: CMakeLists.txt  package.xml
src/simfloat_1001/launch/: float_underwater_world.old  robot_description.launch  upload.launch  world.launch
src/simfloat_1001/model/simfloat_1000/: model.config  model.sdf
src/simfloat_1001/model/simfloat_1001/: model.config  model.sdf
src/simfloat_1001/robots/: default.xacro
src/simfloat_1001/urdf/: gazebo.xacro  simfloat_1001.gazebo  simfloat_1001.xacro  snippets.xacro
src/simfloat_1001/worlds/: empty_underwater.world  empty_world.old  underwater_float.world
src/uuvfloat/uuvfloat_control/: CMakeLists.txt
src/uuvfloat/uuvfloat_control/config/: thruster_manager.yaml
src/uuvfloat/uuvfloat_control/launch/: record_demo.launch  start_pid_controller.launch
src/uuvfloat/uuvfloat_description/: CMakeLists.txt  package.xml
src/uuvfloat/uuvfloat_description/launch/: upload_uuvfloat.launch
src/uuvfloat/uuvfloat_description/robots/: uuvfloat_default.xacro
src/uuvfloat/uuvfloat_description/urdf/: uuvfloat.gazebo.xacro  uuvfloat_base.old  (+4 more)
src/uuvfloat/uuvfloat_gazebo/: CMakeLists.txt
src/uuvfloat/uuvfloat_gazebo/launch/: record.launch  start_demo_pid_controller.launch
